syntax = "proto3";
import "common/comm/commands/proto/types.proto";

package services;
option go_package = "0xacab.org/jstuczyn/CoconutGo/common/grpc/services";

service Issuer {
    rpc GetVerificationKey(commands.VerificationKeyRequest) returns (commands.VerificationKeyResponse);
    rpc SignAttributes(commands.SignRequest) returns (commands.SignResponse);
    rpc BlindSignAttributes(commands.BlindSignRequest) returns (commands.BlindSignResponse);
}

service Provider {
    rpc VerifyCredentials(commands.VerifyRequest) returns (commands.VerifyResponse);
    rpc BlindVerifyCredentials(commands.BlindVerifyRequest) returns (commands.BlindVerifyResponse);
}